add new JS file and css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script type="text/javascript" src="rps.js"></script>
+    <link rel="stylesheet" href="game.css">
 
 </head>
 <body>
-    
+<div id="container">
+    <h1>Rock Paper Scissors !</h1>
+    <input id="reset" type="button" value="Play Again">
+    <div id="buttons">
+        <button id="paper">Paper</button>
+        <button id="rock">Rock</button>
+        <button id="scissors">Scissors</button>
+    </div>
+</div>
+<div id="scores">
+
+</div>
+<div id="winner">
+
+</div>
 </body>
+<script type="text/javascript" src="game.js"></script>
 </html>
