--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 
 </head>
 <body>
+   
 <div id="container">
     <h1>Rock Paper Scissors !</h1>
+    <div id="userData">
+        <p>What's your name?</p>
+        <input id="userName" type="text"> 
+        <input id="enter" type="button" value="Start Game">
+    </div> 
     <input id="reset" type="button" value="Play Again">
     <div id="buttons">
         <button id="paper">Paper</button>
